# api/swagger/swagger.json
@@ -47,13 +47,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     }
                 }
@@ -82,7 +82,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     }
                 }
@@ -122,13 +122,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     }
                 }
@@ -235,13 +235,13 @@
                     "400": {
                         "description": "Bad Request (invalid parameters)",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     }
                 }
@@ -276,19 +276,19 @@
                     "400": {
                         "description": "Invalid task ID",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     },
                     "404": {
                         "description": "Task not found",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     }
                 }
@@ -327,19 +327,19 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     },
                     "404": {
                         "description": "Task not found",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     }
                 }
@@ -366,19 +366,19 @@
                     "400": {
                         "description": "Invalid task ID",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     },
                     "404": {
                         "description": "Task not found",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     }
                 }
@@ -407,7 +407,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseError"
+                            "$ref": "#/definitions/apiresponse.ResponseError"
                         }
                     }
                 }
@@ -415,6 +415,17 @@
         }
     },
     "definitions": {
+        "apiresponse.ResponseError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "model.ProjectCreateRequest": {
             "type": "object",
             "properties": {
@@ -469,17 +480,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.ResponseError": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "error": {
                     "type": "string"
                 }
             }
