# internal/handler/task.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/go-chi/render"
 	"github.com/google/uuid"
+	"github.com/mdflamingo/fgo-tracker-backend/internal/apiresponse"
 	"github.com/mdflamingo/fgo-tracker-backend/internal/logger"
 	"github.com/mdflamingo/fgo-tracker-backend/internal/model"
 	pg "github.com/mdflamingo/fgo-tracker-backend/internal/repository/postgres"
@@ -38,20 +39,20 @@ func NewTaskHandler(taskService *service.TaskService) *TaskHandler {
 // @Param        offset       query     int        false  "Number of items to skip" default(0)
 //
 // @Success      200  {array}  model.TaskListResponse  "Tasks"
-// @Failure      400  {object} model.ResponseError     "Bad Request (invalid parameters)"
-// @Failure      500  {object} model.ResponseError     "Internal Server Error"
+// @Failure      400  {object} apiresponse.ResponseError     "Bad Request (invalid parameters)"
+// @Failure      500  {object} apiresponse.ResponseError     "Internal Server Error"
 // @Router       /api/task/list [get]
 func (h *TaskHandler) GetList(w http.ResponseWriter, r *http.Request) {
 	filter, err := parseFilters(r)
 	if err != nil {
 		logger.Log.Error("handler: failed parsed filters", zap.Error(err))
-		model.ResponseWithError(w, r, http.StatusBadRequest, "Bad request")
+		apiresponse.ResponseWithError(w, r, http.StatusBadRequest, "Bad request")
 		return
 	}
 	tasks, err := h.taskService.GetList(filter)
 	if err != nil {
 		logger.Log.Error("handler: failed to get tasks", zap.Error(err))
-		model.ResponseWithError(w, r, http.StatusInternalServerError, "Internal Server Error")
+		apiresponse.ResponseWithError(w, r, http.StatusInternalServerError, "Internal Server Error")
 		return
 	}
 
@@ -65,15 +66,15 @@ func (h *TaskHandler) GetList(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Param id path string true "UUID"
 // @Success 200 {object} model.TaskResponse "Task found"
-// @Failure 400 {object} model.ResponseError "Invalid task ID"
-// @Failure 404 {object} model.ResponseError "Task not found"
-// @Failure 500 {object} model.ResponseError "Internal Server Error"
+// @Failure 400 {object} apiresponse.ResponseError "Invalid task ID"
+// @Failure 404 {object} apiresponse.ResponseError "Task not found"
+// @Failure 500 {object} apiresponse.ResponseError "Internal Server Error"
 // @Router /api/task/{id} [get]
 func (h *TaskHandler) GetTask(w http.ResponseWriter, r *http.Request) {
 	taskID, err := parseTaskID(r)
 	if err != nil {
 		logger.Log.Error("handler: task ID parsed error", zap.Error(err))
-		model.ResponseWithError(w, r, http.StatusBadRequest, "Invalid task ID")
+		apiresponse.ResponseWithError(w, r, http.StatusBadRequest, "Invalid task ID")
 		return
 	}
 
@@ -81,11 +82,11 @@ func (h *TaskHandler) GetTask(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		if errors.Is(err, pg.ErrTaskNotFound) {
 			logger.Log.Warn("handler: task not found", zap.Error(err))
-			model.ResponseWithError(w, r, http.StatusNotFound, "Task not found")
+			apiresponse.ResponseWithError(w, r, http.StatusNotFound, "Task not found")
 			return
 		}
 		logger.Log.Error("handler: failed to get task", zap.Error(err))
-		model.ResponseWithError(w, r, http.StatusInternalServerError, "Internal Server Error")
+		apiresponse.ResponseWithError(w, r, http.StatusInternalServerError, "Internal Server Error")
 		return
 	}
 
@@ -100,21 +101,21 @@ func (h *TaskHandler) GetTask(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Param request body model.TaskCreateRequest true "Task data"
 // @Success 201 {object} model.TaskCreateResponse "Created task ID"
-// @Failure 400 {object} model.ResponseError "Bad Request"
-// @Failure 500 {object} model.ResponseError "Internal Server Error"
+// @Failure 400 {object} apiresponse.ResponseError "Bad Request"
+// @Failure 500 {object} apiresponse.ResponseError "Internal Server Error"
 // @Router /api/task [post]
 func (h *TaskHandler) CreateTask(w http.ResponseWriter, r *http.Request) {
 	var req model.TaskCreateRequest
 
 	if err := render.DecodeJSON(r.Body, &req); err != nil {
 		logger.Log.Error("handler: decode JSON error", zap.Error(err))
-		model.ResponseWithError(w, r, http.StatusBadRequest, "Invalid JSON payload")
+		apiresponse.ResponseWithError(w, r, http.StatusBadRequest, "Invalid JSON payload")
 		return
 	}
 
 	if err := validator.GlobalValidator.Struct(req); err != nil {
 		logger.Log.Error("handler: request body validation error", zap.Error(err))
-		model.ResponseWithValidationError(w, r, validator.FormatValidationError(err))
+		apiresponse.ResponseWithValidationError(w, r, validator.FormatValidationError(err))
 		return
 	}
 
@@ -123,7 +124,7 @@ func (h *TaskHandler) CreateTask(w http.ResponseWriter, r *http.Request) {
 	response, err := h.taskService.CreateTask(req, creatorID)
 	if err != nil {
 		logger.Log.Error("handler: failed to create task", zap.Error(err))
-		model.ResponseWithError(w, r, http.StatusInternalServerError, "Internal Server Error")
+		apiresponse.ResponseWithError(w, r, http.StatusInternalServerError, "Internal Server Error")
 		return
 	}
 
@@ -138,28 +139,28 @@ func (h *TaskHandler) CreateTask(w http.ResponseWriter, r *http.Request) {
 // @Param id path string true "UUID"
 // @Param request body model.TaskUpdateRequest true "Data for update"
 // @Success 200
-// @Failure 400 {object} model.ResponseError "Invalid request"
-// @Failure 404 {object} model.ResponseError "Task not found"
-// @Failure 500 {object} model.ResponseError "Internal Server Error"
+// @Failure 400 {object} apiresponse.ResponseError "Invalid request"
+// @Failure 404 {object} apiresponse.ResponseError "Task not found"
+// @Failure 500 {object} apiresponse.ResponseError "Internal Server Error"
 // @Router /api/task/{id} [put]
 func (h *TaskHandler) UpdateTask(w http.ResponseWriter, r *http.Request) {
 	taskID, err := parseTaskID(r)
 	if err != nil {
 		logger.Log.Error("handler: task ID parsed error", zap.Error(err))
-		model.ResponseWithError(w, r, http.StatusBadRequest, "Invalid task ID")
+		apiresponse.ResponseWithError(w, r, http.StatusBadRequest, "Invalid task ID")
 		return
 	}
 
 	var req model.TaskUpdateRequest
 	if err := render.DecodeJSON(r.Body, &req); err != nil {
 		logger.Log.Error("handler: decode JSON error", zap.Error(err))
-		model.ResponseWithError(w, r, http.StatusBadRequest, "Invalid JSON payload")
+		apiresponse.ResponseWithError(w, r, http.StatusBadRequest, "Invalid JSON payload")
 		return
 	}
 
 	if err := validator.GlobalValidator.Struct(req); err != nil {
 		logger.Log.Error("handler: request body validation error", zap.Error(err))
-		model.ResponseWithValidationError(w, r, validator.FormatValidationError(err))
+		apiresponse.ResponseWithValidationError(w, r, validator.FormatValidationError(err))
 		return
 	}
 
@@ -167,11 +168,11 @@ func (h *TaskHandler) UpdateTask(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		if errors.Is(err, pg.ErrTaskNotFound) {
 			logger.Log.Warn("handler: task not found", zap.Error(err))
-			model.ResponseWithError(w, r, http.StatusNotFound, "Task not found")
+			apiresponse.ResponseWithError(w, r, http.StatusNotFound, "Task not found")
 			return
 		}
 		logger.Log.Error("handler: failed to update task", zap.Error(err))
-		model.ResponseWithError(w, r, http.StatusInternalServerError, "Internal Server Error")
+		apiresponse.ResponseWithError(w, r, http.StatusInternalServerError, "Internal Server Error")
 		return
 	}
 
@@ -183,15 +184,15 @@ func (h *TaskHandler) UpdateTask(w http.ResponseWriter, r *http.Request) {
 // @Tags Tasks
 // @Param id path string true "UUID"
 // @Success 200
-// @Failure 400 {object} model.ResponseError "Invalid task ID"
-// @Failure 404 {object} model.ResponseError "Task not found"
-// @Failure 500 {object} model.ResponseError "Internal Server Error"
+// @Failure 400 {object} apiresponse.ResponseError "Invalid task ID"
+// @Failure 404 {object} apiresponse.ResponseError "Task not found"
+// @Failure 500 {object} apiresponse.ResponseError "Internal Server Error"
 // @Router /api/task/{id} [delete]
 func (h *TaskHandler) DeleteTask(w http.ResponseWriter, r *http.Request) {
 	taskID, err := parseTaskID(r)
 	if err != nil {
 		logger.Log.Error("handler: task ID parsed error", zap.Error(err))
-		model.ResponseWithError(w, r, http.StatusBadRequest, "Invalid task ID")
+		apiresponse.ResponseWithError(w, r, http.StatusBadRequest, "Invalid task ID")
 		return
 	}
 
@@ -199,11 +200,11 @@ func (h *TaskHandler) DeleteTask(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		if errors.Is(err, pg.ErrTaskNotFound) {
 			logger.Log.Warn("handler: task not found", zap.Error(err))
-			model.ResponseWithError(w, r, http.StatusNotFound, "Task not found")
+			apiresponse.ResponseWithError(w, r, http.StatusNotFound, "Task not found")
 			return
 		}
 		logger.Log.Error("handler: failed to delete task", zap.Error(err))
-		model.ResponseWithError(w, r, http.StatusInternalServerError, "Internal Server Error")
+		apiresponse.ResponseWithError(w, r, http.StatusInternalServerError, "Internal Server Error")
 		return
 	}
 
